# hlsl-grimoire-sample-wgpu

./: Cargo.toml  LICENSE  README.md
assets/: 02_01.wgsl  02_02.wgsl  03_01.wgsl  03_02.wgsl  04_01.wgsl  04_02.wgsl  04_03.wgsl  04_04.wgsl  05_01.wgsl  05_02.wgsl  05_03.wgsl  05_04.wgsl  06_01.wgsl  06_02.wgsl  06_03.wgsl  07_01.wgsl  07_02.wgsl  07_03.wgsl  08_01.wgsl  09_01.wgsl  09_02.wgsl  09_03.wgsl  09_04.wgsl  09_05.wgsl  09_06.wgsl  09_07.wgsl  09_09.wgsl  09_10.wgsl  teapot.glb
src/: sample_02_01.rs  sample_02_02.rs  sample_03_01.rs  sample_03_02.rs  sample_04_01.rs  sample_04_02.rs  sample_04_03.rs  sample_04_04.rs  sample_05_01.rs  sample_05_02.rs  sample_05_03.rs  sample_05_04.rs  sample_06_01.rs  sample_06_02.rs  sample_06_03.rs  sample_07_01.rs  sample_07_02.rs  sample_07_03.rs  sample_08_01.rs  sample_08_02.rs  sample_08_03.rs  sample_09_01.rs  sample_09_02.rs  sample_09_03.rs  sample_09_04.rs  sample_09_05.rs  sample_09_06.rs  sample_09_07.rs  sample_09_08.rs  sample_09_09.rs  sample_09_10.rs
