[package]
name = "hlsl-grimoire-sample-wgpu"
version = "0.1.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Simple triangle
[[bin]]
name = "sample_02_01"
path = "src/sample_02_01.rs"

# Vertex color
[[bin]]
name = "sample_02_02"
path = "src/sample_02_02.rs"

# Uniform data
[[bin]]
name = "sample_03_01"
path = "src/sample_03_01.rs"

# Texture mapping
[[bin]]
name = "sample_03_02"
path = "src/sample_03_02.rs"

# Load glb
[[bin]]
name = "sample_04_01"
path = "src/sample_04_01.rs"

# Directional light + diffuse color
[[bin]]
name = "sample_04_02"
path = "src/sample_04_02.rs"

# Directional light + diffuse color + specular color
[[bin]]
name = "sample_04_03"
path = "src/sample_04_03.rs"

# Directional light + diffuse color + specular color + ambient color
[[bin]]
name = "sample_04_04"
path = "src/sample_04_04.rs"

# Point light
[[bin]]
name = "sample_05_01"
path = "src/sample_05_01.rs"

# Spot light
[[bin]]
name = "sample_05_02"
path = "src/sample_05_02.rs"

# Rim light
[[bin]]
name = "sample_05_03"
path = "src/sample_05_03.rs"

# Hemisphere light
[[bin]]
name = "sample_05_04"
path = "src/sample_05_04.rs"

# Normal mapping
[[bin]]
name = "sample_06_01"
path = "src/sample_06_01.rs"

# Specular mapping
[[bin]]
name = "sample_06_02"
path = "src/sample_06_02.rs"

# Ambient occlusion
[[bin]]
name = "sample_06_03"
path = "src/sample_06_03.rs"

# Divide diffuse by PI
[[bin]]
name = "sample_07_01"
path = "src/sample_07_01.rs"

# Simple PBR. Lambert diffuse + Fresnel diffuse + Cook-torrance specular.
[[bin]]
name = "sample_07_02"
path = "src/sample_07_02.rs"

# Simple PBR. Lambert diffuse + Disney based Fresnel diffuse + Cook-torrance specular.
[[bin]]
name = "sample_07_03"
path = "src/sample_07_03.rs"

# Texture mapping
[[bin]]
name = "sample_08_01"
path = "src/sample_08_01.rs"

# Alpha blending 1
[[bin]]
name = "sample_08_02"
path = "src/sample_08_02.rs"

# Alpha blending 2
[[bin]]
name = "sample_08_03"
path = "src/sample_08_03.rs"

# Linear wipe
[[bin]]
name = "sample_09_01"
path = "src/sample_09_01.rs"

# Directionsl linear wipe
[[bin]]
name = "sample_09_02"
path = "src/sample_09_02.rs"

# Circle linear wipe
[[bin]]
name = "sample_09_03"
path = "src/sample_09_03.rs"

# Stripe linear wipe
[[bin]]
name = "sample_09_04"
path = "src/sample_09_04.rs"

# Stripe linear wipe
[[bin]]
name = "sample_09_05"
path = "src/sample_09_05.rs"

# Stripe linear wipe
[[bin]]
name = "sample_09_06"
path = "src/sample_09_06.rs"

# monochrome effect
[[bin]]
name = "sample_09_07"
path = "src/sample_09_07.rs"

[dependencies]
wgpu = "0.8.1"
bytemuck = { version = "1.4", features = ["derive"] }
winit = { version = "0.24", features = ["web-sys"] }
env_logger = "0.8"
pollster = "0.2"
cgmath = "0.18.0"
image = "0.23"
anyhow = "1.0"

[dependencies.gltf]
version = "0.16"
features = ["extras", "names"]
